[package]
name = "cube-store"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
